--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -62,6 +62,18 @@ jobs:
     
             echo "matrix=$DIRS_JSON" >> $GITHUB_OUTPUT
             echo "Created matrix: $DIRS_JSON"
+  
+  job2:
+    runs-on: ubuntu-latest
+    needs: [detect-changes]
+    steps:
+      # Will show
+      # {
+      #   "output_1": "1",
+      #   "output_2": "2",
+      #   "output_3": "3"
+      # }
+      - run: echo '${{ toJSON(needs.detect-changes.outputs.matrix) }}'
  
   analyze:
     name: Analyze (${{ matrix.directory }})
