--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -39,102 +39,13 @@ jobs:
             # For push events, compare with the previous commit
             CHANGED_FILES=$(git diff --name-only HEAD^ HEAD)
           fi
+
+           echo "Changed files: $CHANGED_FILES
           
-          CHANGED_DIRS=$(echo "$CHANGED_FILES" | awk -F'/' '{print $1}' | sort -u | grep -v '^$' | tr '\n' ' ')
-          echo "DIRS=$CHANGED_DIRS" >> "$GITHUB_OUTPUT"
-
-
-      - name: Set matrix
-        id: set-matrix
-        run: |
-            # Create a valid JSON array from space-separated directory names
-            DIRS_ARRAY=()
-            for dir in ${{ steps.changes.outputs.DIRS }}; do
-              DIRS_ARRAY+=("\"$dir\"")
-            done
-    
-            # Join with commas and wrap in brackets to create a JSON array
-            if [ ${#DIRS_ARRAY[@]} -eq 0 ]; then
-                DIRS_JSON="[]"
-            else
-                DIRS_JSON="[$(IFS=,; echo "${DIRS_ARRAY[*]}")]"
-            fi
-    
-            echo "matrix=$DIRS_JSON" >> "$GITHUB_OUTPUT"
-            echo "Created matrix: $DIRS_JSON"            
-
-  analyze:
-    name: Analyze (${{ matrix.directory }})
-    needs: detect-changes
-    runs-on: 'ubuntu-latest' 
-    permissions:
-      # required for all workflows
-      security-events: write
-
-      # required to fetch internal or private CodeQL packs
-      packages: read
-
-      # only required for workflows in private repositories
-      actions: read
-      contents: read
-
-    strategy:
-      fail-fast: false
-      matrix:
-        directory: ${{ fromJSON(needs.detect-changes.outputs.matrix) }}
-        
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-          sparse-checkout: ${{ matrix.directory }}
-          sparse-checkout-cone-mode: false
-
-    - name: Map directory to language
-      id: lang-mapping
-      run: |
-        case "${{ matrix.directory }}" in
-          "frontend")
-            echo "LANG=javascript" >> $GITHUB_OUTPUT
-            echo "SHOULD_SCAN=true" >> $GITHUB_OUTPUT
-            ;;
-          "auth"|"auth-ext")
-            echo "LANG=go,python" >> $GITHUB_OUTPUT
-            echo "SHOULD_SCAN=true" >> $GITHUB_OUTPUT
-            ;;
-          "storage")
-            echo "LANG=java" >> $GITHUB_OUTPUT
-            echo "SHOULD_SCAN=true" >> $GITHUB_OUTPUT
-            ;;
-          "gallery")
-            echo "LANG=go" >> $GITHUB_OUTPUT
-            echo "SHOULD_SCAN=true" >> $GITHUB_OUTPUT
-            ;;
-          *)
-            echo "Directory '${{ matrix.directory }}' is not configured for scanning. Skipping."
-            echo "SHOULD_SCAN=false" >> $GITHUB_OUTPUT
-            exit 0
-            ;;
-        esac
-    
-        echo "Will scan '${{ matrix.directory }}' for ${{ steps.lang-mapping.outputs.LANG }} code"
-
+         # CHANGED_DIRS=$(echo "$CHANGED_FILES" | awk -F'/' '{print $1}' | sort -u | grep -v '^$' | tr '\n' ' ')
+         # echo "DIRS=$CHANGED_DIRS" >> "$GITHUB_OUTPUT"
+            
           
-    # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
-      with:
-        languages: ${{ steps.lang-mapping.outputs.LANG }}
-        build-mode: none
-        if: steps.lang-mapping.outputs.SHOULD_SCAN == 'true'
-
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
-      if: steps.lang-mapping.outputs.SHOULD_SCAN == 'true'
 
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
-      with:
-        category: "/directory:${{ matrix.directory }}"
-      if: steps.lang-mapping.outputs.SHOULD_SCAN == 'true'
+    
