--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,7 +40,7 @@ jobs:
             CHANGED_FILES=$(git diff --name-only HEAD^ HEAD)
           fi
 
-           echo "Changed files: $CHANGED_FILES
+           echo "Changed files: $CHANGED_FILES"
           
          # CHANGED_DIRS=$(echo "$CHANGED_FILES" | awk -F'/' '{print $1}' | sort -u | grep -v '^$' | tr '\n' ' ')
          # echo "DIRS=$CHANGED_DIRS" >> "$GITHUB_OUTPUT"
