--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -34,15 +34,15 @@ jobs:
         run: |
           cd .github/scripts
           if [[ ${{ github.event_name }} == 'pull_request' ]]; then
-            "changes=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | awk -f process.awk | jq )" >> "$GITHUB_OUTPUT"
+            "changes=$(git diff --name-only ${{ github.event.pull_request.base.sha }} ${{ github.event.pull_request.head.sha }} | awk -f process.awk | jq )" >> $GITHUB_OUTPUT
           else
             # For push events, compare with the previous commit
-            "changes=$(git diff --name-only HEAD^ HEAD | awk -f process.awk | jq )" >> "$GITHUB_OUTPUT"
+            "changes=$(git diff --name-only HEAD^ HEAD | awk -f process.awk | jq )" >> $GITHUB_OUTPUT
           fi
       
       - name: Debug 
         run: |
-          echo '${{ steps.changes.outputs.changes }}'
+          echo "Changes :${{ steps.changes.outputs.changes }}"
 
         
 
