--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 2
+          fetch-depth: 0
           
       - name: Find changed directories and map to directories and languages
         id: detect-changes
@@ -66,7 +66,7 @@ jobs:
       matrix: ${{ fromJson(needs.detect-changes.outputs.matrix) }}
 
     steps:
-      - name: Debug
+      - name: Debuggi
         run: |
           echo "Directory: ${{ matrix.directory }}"
           echo "Language: ${{ matrix.language }}"
