--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -85,6 +85,12 @@ jobs:
           uses: github/codeql-action/analyze@v3
           with:
            category: "/language:${{matrix.language}}/app:${{matrix.directory}}"
+
+        - name: Upload SARIF
+          uses: github/codeql-action/upload-sarif@v3
+          with:
+           sarif_file: empty.sarif
+           category: "/language:java-kotlin/app:storage" 
         
         
             
