--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -72,6 +72,7 @@ jobs:
           with:
             sparse-checkout: |
               ${{ matrix.directory }}
+              scripts/empty.sarif
             sparse-checkout-cone-mode: false
         
 
