--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -90,7 +90,7 @@ jobs:
         - name: Upload SARIF
           uses: github/codeql-action/upload-sarif@v3
           with:
-           sarif_file: scripts/empty.sarif
+           sarif_file: .github/scripts/empty.sarif
            category: "/language:java-kotlin/app:storage" 
         
         
